# gradient-heterogeneity

./: .gitignore  README.md  hessian_per_param.py  pyproject.toml  train_nlp.py  train_vision.py
conf/resnet18/: normal.yaml
conf/roberta-base/: arguments.yaml  constant.yaml  cosine.yaml  normal.yaml
conf/vit-base/: normal.yaml
model/: model_with_linear_layer.py  utils.py
optimizer/: signum.py
pyhessian/: hessian_nlp.py  hessian_vision.py  utils.py
shell_scripts/: hessian_per_param.sh  train_nlp.sh  train_vision.sh
utils_nlp/: arguments.py  custom_metric.py  run_utils_nlp.py
utils_nlp/tasks/: get_trainer.py
utils_nlp/tasks/glue/: dataset.py
utils_nlp/tasks/superglue/: dataset.py
utils_shared/: constants.py  run_utils_shared.py
utils_vision/: run_utils_vision.py
