[tool.poetry]
name = "unnamed-project"
version = "0.1.0"
description = ""
authors = ["tom4649"]
readme = "README.md"

[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "2.4.0+cu121", source = "torch_cu121"}
setuptools = "^75.1.0"
transformers = "^4.45.1"
scikit-learn = "^1.5.2"
tqdm = "^4.66.5"
datasets = "v2.21.0"
accelerate = "^0.34.2"
ray = "^2.37.0"
ipykernel = "^6.29.5"
polars = "^1.8.2"
safetensors = "^0.4.5"
h5py = "^3.12.1"
seaborn = "^0.13.2"
absl-py = "^2.1.0"
timm = "^1.0.11"
tensorboard = "^2.18.0"
torchprofile = "^0.0.4"

